...
                .chartYAxis {
                    AxisMarks(position: .leading, values: [1, 2, 3]) { value in
                        AxisGridLine()
                        AxisValueLabel {
                            if let intValue = value.as(Int.self) {
                                switch intValue {
                                case 3: Text("Good").font(.caption)
                                case 2: Text("Okay").font(.caption)
                                case 1: Text("Not Good").font(.caption)
                                default: EmptyView()
                                }
                            }
                        }
...
